# linkman

./: README.md  env_example.text  pyproject.toml
linkman/: manage.py
linkman/apps/api/: urls.py  utils.py  views.py
linkman/apps/authentication/: admin.py  forms.py  models.py  tokens.py  urls.py  utils.py  views.py
linkman/apps/authentication/migrations/: 0001_initial.py  0002_customuser_is_verified.py
linkman/apps/authentication/static/authentication/: login.js  settings.js  signup.js
linkman/apps/authentication/templates/authentication/: login.html  settings.html  signup.html  verify_email.html
linkman/apps/main/: admin.py  models.py  urls.py  views.py
linkman/apps/main/migrations/: 0001_initial.py  0002_alter_group_user_alter_link_group_alter_link_user.py  0003_alter_link_url.py  0004_group_last_accessed_at.py
linkman/apps/main/static/main/: add_group_form.js  add_link_form.js  clicked_link_form.js  delete_link_form.js  display.js  display_utils.js  edit_link_form.js  forms.js  main.js  utils.js
linkman/apps/main/templates/main/: dashboard.html
linkman/linkman/: asgi.py  settings.py  urls.py  wsgi.py
linkman/templates/: footer.html  index.html  navbar_guest.html  navbar_user.html
linkman/templates/registration/: forgot_password.html  forgot_password_email.html  password_reset_complete.html  reset_password.html
linkman/theme/static_src/: package-lock.json
linkman/theme/static_src/src/: styles.css
linkman/theme/templates/: base.html
